# hello_agent_assignment

./: .gitignore  README.md
packaged-agent/: .env.example  README.md  pyproject.toml
packaged-agent/src/packaged_agent/: __init__.py  agent.py
simple-agent/: README.md  main.py  pyproject.toml
